# auth-xmppmessage

./: .gitignore  Cargo.toml  README.md  build.rs  demo.sh  functions.py  login-freebsd.sh  login.py  login_test.py  server.py
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/clib/: sendxmpp.c
rust/src/: apachelog.rs  handler.rs  main.rs  message.rs  token.rs
src/: handler.rs  main.rs  message.rs  sendxmpp.rs  token.rs
